--- a/main_file.ipynb
+++ b/main_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "6636"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,39 +190,24 @@
        "Legumes and Legume Products          365\n",
        "Lamb, Veal, and Game Products        345\n",
        "Sweets                               341\n",
-       "Pork Products                        328\n",
        "Fruits and Fruit Juices              328\n",
+       "Pork Products                        328\n",
        "Name: group, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#  distribution of food groups\n",
     "pd.value_counts(info.group)[:10]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nutrients = []\n",
-    "\n",
-    "for rec in db:\n",
-    "    fnuts = pd.DataFrame(rec['nutrients'])\n",
-    "    fnuts['id'] = rec['id']\n",
-    "    nutrients.append(fnuts)\n",
-    "\n",
-    "nutrients = pd.concat(nutrients, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -364,18 +349,31 @@
        "[389355 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Assembling all the nutrients for each food into a single large table\n",
+    "nutrients = []\n",
+    "\n",
+    "for rec in db:\n",
+    "    # convert each list of food nutrients to a DataFrame\n",
+    "    fnuts = pd.DataFrame(rec['nutrients'])\n",
+    "    # add a column for the food id\n",
+    "    fnuts['id'] = rec['id']\n",
+    "    # append the DataFrame to a list\n",
+    "    nutrients.append(fnuts)\n",
+    "\n",
+    "# these can be concatenated together\n",
+    "nutrients = pd.concat(nutrients, ignore_index=True)\n",
     "nutrients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +540,7 @@
        "[375176 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +594,7 @@
        "Name: 30000, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -629,16 +627,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x17326184668>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c8d9832390>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -662,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +706,7 @@
        "Name: food, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
